--- a/sass/elements/_intro.scss
+++ b/sass/elements/_intro.scss
@@ -27,3 +27,7 @@
 .home-intro{
     padding-top: 2rem;
 }
+
+.shop_intro{
+    padding-top:1.2rem;
+}
