--- a/sass/elements/_title.scss
+++ b/sass/elements/_title.scss
@@ -78,6 +78,7 @@
 
     p {
         line-height: 1.5;
+        padding-bottom:1.5rem;
     }
 
     cite {
