--- a/sass/site/pages/_contact.scss
+++ b/sass/site/pages/_contact.scss
@@ -27,6 +27,8 @@
             }
             form.wpcf7-form{
                 p{
+                    padding-bottom: 1.5em;
+                    
                     label{
                         font-family: $font__heading;
                         font-size: 0.95rem;
