--- a/sass/site/pages/_wholesale.scss
+++ b/sass/site/pages/_wholesale.scss
@@ -30,7 +30,7 @@
             }
             form.wpcf7-form{
                 p{
-                  
+                  padding-bottom:1.5rem;
                     &:nth-of-type(2),
                     &:nth-of-type(7),
                     label{
